# vroomon

./: Car.gd  Car.gd.uid  CarDNA.gd  CarDNA.gd.uid  CarSimulation.gd  CarSimulation.gd.uid  GameManager.gd  GameManager.gd.uid  GameManager.tscn  Main.gd  Main.gd.uid  Main.tscn  MainMenu.gd  MainMenu.gd.uid  MainMenu.tscn  PopulationManager.gd  PopulationManager.gd.uid  TestDrive.gd  TestDrive.gd.uid  TestDrive.tscn  icon.svg.import  population.gd  population.gd.uid  project.godot  pyproject.toml
.devcontainer/: devcontainer.json
old_code/vroomon/src/vroomon/: ground.py  main.py  simulation.py
old_code/vroomon/src/vroomon/car/: car.py
old_code/vroomon/src/vroomon/car/frame/: rectangle.py  wheel.py
old_code/vroomon/tests/: test_car_reproduction.py  test_main.py  test_population_mutate.py  test_pygame_pymunk_basic.py  test_rectangle.py  test_simulation.py  test_zero_power_wheel_bug.py
src/vroomon/: __about__.py  car.py  ground.py  main.py  simulation.py
src/vroomon/car/: __init__.py  car.py
src/vroomon/car/frame/: all.py  rectangle.py  wheel.py
src/vroomon/car/powertrain/: __init__.py  all.py  cylinder.py  driveshaft.py  gearset.py
src/vroomon/population/: population.py
tests/: test_basic_car.py  test_car_reproduction.py  test_coordinate_nan_tracking.py  test_motor_configuration_bug.py  test_nan_physics_issue.py  test_physics_debug.py  test_population.py  test_population_mutate.py  test_pygame_nan_coordinates.py  test_pygame_pymunk_basic.py  test_reproduce_nan_issue.py  test_wheel.py  test_zero_power_wheel_bug.py
(+3 files in other folders)
